--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><!--[if IE]><link rel="icon" href="/favicon.ico"><![endif]--><title>frontend</title><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300;500;700&display=swap" rel="stylesheet"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"><style>/* Global */
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"><!--[if IE]><link rel="icon" href="/favicon.ico"><![endif]--><title>frontend</title><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300;500;700&display=swap" rel="stylesheet"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"><style>/* Global */
 html,
 body,
 div,
@@ -108,7 +108,7 @@ html{
 body {
   width: 100%;
   height: 100%;
-
+}
 ol,
 ul {
   list-style: none;
@@ -132,7 +132,7 @@ table {
 * {
   box-sizing: border-box;
 }
-}
+
 #app {
   width: 100%;
   height: 100%;
@@ -149,31 +149,10 @@ table {
 
 :root {
 
-  /* Color */
-
   --color-white: #ffffff;
+  --color-yellow: #fdbf5a;
+  --color-grey: #EEEEEE;
 
-  --color-light-white: #eeeeee;
-
-  --color-dark-white: #bdbdbd;
-
-  --color-pink: #fe918d;
-
-  --color-dark-pink: #ff6863;
-
-  --color-dark-grey: #4d4d4d;
-
-  --color-grey: #616161;
-
-  --color-light-grey: #7c7979;
-
-  --color-blue: #73aace;
-
-  --color-yellow: #fff7d1;
-
-  --color-orange: #feb546;
-
-  --color-black: #000000;
 
   /* Font size */
 
@@ -195,4 +174,4 @@ table {
 
   --weight-regular: 400;
 
-}</style><link href="/css/app~d0ae3f07.79e1cd9d.css" rel="preload" as="style"><link href="/css/chunk-vendors~11c2601a.369f4615.css" rel="preload" as="style"><link href="/css/chunk-vendors~4fe686d2.aaf41bf3.css" rel="preload" as="style"><link href="/js/app~d0ae3f07.5e307ca0.js" rel="preload" as="script"><link href="/js/chunk-vendors~11c2601a.05e14046.js" rel="preload" as="script"><link href="/js/chunk-vendors~253ae210.c92ff8a9.js" rel="preload" as="script"><link href="/js/chunk-vendors~4a7e9e0b.3bce18ee.js" rel="preload" as="script"><link href="/js/chunk-vendors~4fe686d2.51e9898e.js" rel="preload" as="script"><link href="/js/chunk-vendors~678f84af.46028bc3.js" rel="preload" as="script"><link href="/js/chunk-vendors~ce053847.ada88f83.js" rel="preload" as="script"><link href="/js/chunk-vendors~d2305125.556e3034.js" rel="preload" as="script"><link href="/js/chunk-vendors~d939e436.64e41709.js" rel="preload" as="script"><link href="/js/chunk-vendors~f9ca8911.a2364d65.js" rel="preload" as="script"><link href="/js/chunk-vendors~fdc6512a.0d2995df.js" rel="preload" as="script"><link href="/css/chunk-vendors~11c2601a.369f4615.css" rel="stylesheet"><link href="/css/chunk-vendors~4fe686d2.aaf41bf3.css" rel="stylesheet"><link href="/css/app~d0ae3f07.79e1cd9d.css" rel="stylesheet"><link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"><link rel="manifest" href="/manifest.json"><meta name="theme-color" content="#4DBA87"><meta name="apple-mobile-web-app-capable" content="no"><meta name="apple-mobile-web-app-status-bar-style" content="default"><meta name="apple-mobile-web-app-title" content="frontend"><link rel="apple-touch-icon" href="/img/icons/apple-touch-icon-152x152.png"><link rel="mask-icon" href="/img/icons/safari-pinned-tab.svg" color="#4DBA87"><meta name="msapplication-TileImage" content="/img/icons/msapplication-icon-144x144.png"><meta name="msapplication-TileColor" content="#000000"></head><body><noscript><strong></strong></noscript><div id="app"></div><script src="/js/chunk-vendors~253ae210.c92ff8a9.js"></script><script src="/js/chunk-vendors~d939e436.64e41709.js"></script><script src="/js/chunk-vendors~f9ca8911.a2364d65.js"></script><script src="/js/chunk-vendors~678f84af.46028bc3.js"></script><script src="/js/chunk-vendors~fdc6512a.0d2995df.js"></script><script src="/js/chunk-vendors~d2305125.556e3034.js"></script><script src="/js/chunk-vendors~4a7e9e0b.3bce18ee.js"></script><script src="/js/chunk-vendors~ce053847.ada88f83.js"></script><script src="/js/chunk-vendors~11c2601a.05e14046.js"></script><script src="/js/chunk-vendors~4fe686d2.51e9898e.js"></script><script src="/js/app~d0ae3f07.5e307ca0.js"></script></body></html>
+}</style><link href="/css/app~d0ae3f07.a17911b4.css" rel="preload" as="style"><link href="/css/chunk-vendors~11c2601a.8b448a85.css" rel="preload" as="style"><link href="/css/chunk-vendors~23e6e9db.aaf41bf3.css" rel="preload" as="style"><link href="/js/app~d0ae3f07.dc6e4d8b.js" rel="preload" as="script"><link href="/js/chunk-vendors~11c2601a.05e14046.js" rel="preload" as="script"><link href="/js/chunk-vendors~23e6e9db.e1dc4695.js" rel="preload" as="script"><link href="/js/chunk-vendors~253ae210.c92ff8a9.js" rel="preload" as="script"><link href="/js/chunk-vendors~4a7e9e0b.2508d2b1.js" rel="preload" as="script"><link href="/js/chunk-vendors~678f84af.46028bc3.js" rel="preload" as="script"><link href="/js/chunk-vendors~ce053847.af5a93c9.js" rel="preload" as="script"><link href="/js/chunk-vendors~d2305125.556e3034.js" rel="preload" as="script"><link href="/js/chunk-vendors~d939e436.64e41709.js" rel="preload" as="script"><link href="/js/chunk-vendors~f9ca8911.a2364d65.js" rel="preload" as="script"><link href="/js/chunk-vendors~fdc6512a.0d2995df.js" rel="preload" as="script"><link href="/css/chunk-vendors~11c2601a.8b448a85.css" rel="stylesheet"><link href="/css/chunk-vendors~23e6e9db.aaf41bf3.css" rel="stylesheet"><link href="/css/app~d0ae3f07.a17911b4.css" rel="stylesheet"><link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"><link rel="manifest" href="/manifest.json"><meta name="theme-color" content="#4DBA87"><meta name="apple-mobile-web-app-capable" content="no"><meta name="apple-mobile-web-app-status-bar-style" content="default"><meta name="apple-mobile-web-app-title" content="frontend"><link rel="apple-touch-icon" href="/img/icons/apple-touch-icon-152x152.png"><link rel="mask-icon" href="/img/icons/safari-pinned-tab.svg" color="#4DBA87"><meta name="msapplication-TileImage" content="/img/icons/msapplication-icon-144x144.png"><meta name="msapplication-TileColor" content="#000000"></head><body><noscript><strong></strong></noscript><div id="app"></div><script src="/js/chunk-vendors~253ae210.c92ff8a9.js"></script><script src="/js/chunk-vendors~d939e436.64e41709.js"></script><script src="/js/chunk-vendors~f9ca8911.a2364d65.js"></script><script src="/js/chunk-vendors~678f84af.46028bc3.js"></script><script src="/js/chunk-vendors~fdc6512a.0d2995df.js"></script><script src="/js/chunk-vendors~d2305125.556e3034.js"></script><script src="/js/chunk-vendors~4a7e9e0b.2508d2b1.js"></script><script src="/js/chunk-vendors~ce053847.af5a93c9.js"></script><script src="/js/chunk-vendors~11c2601a.05e14046.js"></script><script src="/js/chunk-vendors~23e6e9db.e1dc4695.js"></script><script src="/js/app~d0ae3f07.dc6e4d8b.js"></script></body></html>
