--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -121,7 +121,7 @@ html{
 body {
   width: 100%;
   height: 100%;
-
+}
 ol,
 ul {
   list-style: none;
@@ -145,7 +145,7 @@ table {
 * {
   box-sizing: border-box;
 }
-}
+
 #app {
   width: 100%;
   height: 100%;
@@ -162,31 +162,10 @@ table {
 
 :root {
 
-  /* Color */
-
   --color-white: #ffffff;
+  --color-yellow: #fdbf5a;
+  --color-grey: #EEEEEE;
 
-  --color-light-white: #eeeeee;
-
-  --color-dark-white: #bdbdbd;
-
-  --color-pink: #fe918d;
-
-  --color-dark-pink: #ff6863;
-
-  --color-dark-grey: #4d4d4d;
-
-  --color-grey: #616161;
-
-  --color-light-grey: #7c7979;
-
-  --color-blue: #73aace;
-
-  --color-yellow: #fff7d1;
-
-  --color-orange: #feb546;
-
-  --color-black: #000000;
 
   /* Font size */
 
